update structures and lightbox

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -53,7 +54,7 @@
 		</div>
 	</div>	
 	<div class="section-trait row-project-color">
-		<h2>More about Wei</h2>
+		<h2>Wei is...</h2>
 		<div class="traits" data-aos="flip-left" data-aos-once="true">
 			<img src="svg/light.svg" class="svg-index"/><br>
 			<h3>Creative</h3>
