--- a/projects/artism.html
+++ b/projects/artism.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" type="text/css" href="../style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -22,25 +23,25 @@
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
-		<span class="drawer_btn_nav"><a href="about.html">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="../index#work.html" class="light">WORK</a></span>
+		<span class="drawer_btn_nav"><a href="../index.html#about">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="../wei_cheng_resume.pdf" target="_blank">RESUME</a></span>		
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
 	<header class="header">
-		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a href="../about.html" class="a_nav"><span class="btn_nav">ABOUT</span></a>
-		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
+		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>	
+		<a href="../wei_cheng_resume.pdf" target="_blank" class="a_nav"><span class="btn_nav">RESUME</span></a>		
+		<a href="../index.html#about" class="a_nav"><span class="btn_nav">ABOUT</span></a>
+		<a href="../index.html#work" class="a_nav"><span class="btn_nav light">WORK</span></a>	
 	</header>
 
-	<div class="parallax-small parallax-artism">
-		<article class="intro">
-			<h1>Artism</h1>
-			<p>UI/UX Design</p>
-		</article>
-	</div>
+	<article class="intro parallax-small intro-artism">
+		<h1>Artism</h1>
+		<p>UI/UX Design</p>
+	</article>
 
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
@@ -53,22 +54,22 @@
 				</p>
 			</div>
 		</div>
-		<div class="row-project">
+		<div class="row-thin">
 			<div class="col-four">
-				<h5>Role</h5>
+				<h6>Role</h6>
 				<p>UX researcher<br>UX designer<br>UI designer</p>
 			</div>
 			<div class="col-four">
-				<h5>Team</h5>
+				<h6>Team</h6>
 				<p>Wei Cheng<br>Yanbin Hao</p>
 			</div>
 			<div class="col-four">
-				<h5>Tools</h5>
+				<h6>Tools</h6>
 				<p>Paper Prototyping, Balsamiq, Photoshop, Sketch, InVision
 				</p>
 			</div>
 			<div class="col-four">
-				<h5>Methods</h5>
+				<h6>Methods</h6>
 				<p>Interview, Observation, Wireframing
 				</p>
 			</div>
@@ -86,10 +87,11 @@
 			<div class="col-one">
 				<h5>Observation</h5>
 				<p>
-					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. It turned out that preschool children (3-5) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is called PAINT.Through the observation, we have these takeaways:
+					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. It turned out that preschool children (3-5) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is called PAINT. Through the observation, we have these takeaways:
 					<div class="col-three"><img src="artism/observe-1.svg" alt="" class="img-col-three"></div>
 					<div class="col-three"><img src="artism/observe-2.svg" alt="" class="img-col-three"></div>
 					<div class="col-three"><img src="artism/observe-3.svg" alt="" class="img-col-three"></div>
+
 					<ol>
 						<li>
 							<b>Drawing can be a communication way. </b>English is not the first language of the little girl we observed, but we could still feel and know what her current emotions through her painting activity.
@@ -108,7 +110,7 @@
 			</div>
 		</div>
 		<div class="row-project">
-			<div class="col-one ">
+			<div class="col-one">
 				<h5>Interview</h5>
 				<p>
 					The goal of this interview phase is to found out their child’s use of technology and their beliefs about how technology influences children. We interviewed the little girl’s mother for 20 minutes with 5 questions and open for her own sharing. The mother told us that technology is a tool that can help kids learning in this new generation, just like books and toys.
@@ -128,8 +130,8 @@
 			</div>
 		</div>	
 		<div class="row-project">
-			<h5>Research</h5>
 			<div class="col-one">
+				<h5>Research</h5>
 				<h6>1.The Prevalence of Autism</h6>
 				<img src="artism/research-1.jpg" alt="research-1" class="img-col-one">				
 				<p>We conducted literature review to find out potential related topics that we can do. According to Centers for Disease Control and Prevention (CDC), based on an analysis of 2014-2018 medical and educational records of 8-11 year-old autism’s estimated prevalence among children in US is 1 in 49 kids. Thus, we decide to set our target need group as the preschool kids (3-5 years old) with autism spectrum disorder.</p>				
@@ -154,12 +156,36 @@
 			</div>				
 		</div>
 
-		<div class="row-project row-project-color">
+		<div class="row-full row-project-color">
 			<div class="col-one">
 				<h5>Persona</h5>
-				<img src="artism/persona-1.png" alt="persona-1" class="img-col-one">		
-				<img src="artism/persona-2.png" alt="persona-2" class="img-col-one">
+				<p>you can click on the images to enlarge.</p>
+			</div>
+			<div class="col-two">
+				<img src="artism/persona-1.png" alt="persona-1" class="img-col-two hover-shadow" onclick="openModal();currentSlide(1)">
+			</div>
+			<div class="col-two">	
+				<img src="artism/persona-2.png" alt="persona-2" class="img-col-two hover-shadow" onclick="openModal();currentSlide(2)">
 			</div>	
+		</div>
+
+		<!-- The Modal/Lightbox -->
+		<div id="myModal" class="modal">
+			<span class="close cursor" onclick="closeModal()">&times;</span>
+			<div class="modal-content">
+			    <div class="mySlides">
+			      <div class="numbertext">1 / 2</div>
+			      <img src="artism/persona-1.png" class="img-in-lightbox">
+			    </div>
+
+			    <div class="mySlides">
+			      <div class="numbertext">2 / 2</div>
+			      <img src="artism/persona-2.png" class="img-in-lightbox">
+			    </div>
+	  		</div>
+		    <!-- Next/previous controls -->
+		    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		    <a class="next" onclick="plusSlides(1)">&#10095;</a>	  		
 		</div>
 
 		<div class="row-project row-project-color">
@@ -223,5 +249,6 @@
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../js/scroll.js"></script>
+	<script src="../js/lightbox.js"></script>
 </body>
 </html>
