--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" type="text/css" href="../style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -22,25 +23,25 @@
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="../index.html" class="light">WORK</a></span>
-		<span class="drawer_btn_nav"><a href="../art.html">ART</a></span>
+		<span class="drawer_btn_nav"><a href="../index#work.html" class="light">WORK</a></span>
+		<span class="drawer_btn_nav"><a href="../index.html#about">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="../wei_cheng_resume.pdf" target="_blank">RESUME</a></span>		
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
 	<header class="header">
-		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a href="../about.html" class="a_nav"><span class="btn_nav">ABOUT</span></a>
-		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
+		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>	
+		<a href="../wei_cheng_resume.pdf" target="_blank" class="a_nav"><span class="btn_nav">RESUME</span></a>		
+		<a href="../index.html#about" class="a_nav"><span class="btn_nav">ABOUT</span></a>
+		<a href="../index.html#work" class="a_nav"><span class="btn_nav light">WORK</span></a>	
 	</header>
 
-	<div class="parallax-small parallax-designdiary">
-		<article class="intro">
-			<h1>DESIGN DIARY</h1>
-			<p>UX Design</p>
-		</article>
-	</div>
+	<article class="intro parallax-small intro-designdiary">
+		<h1>DESIGN DIARY</h1>
+		<p>UX Design</p>
+	</article>
 
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project" data-aos="fade-down" data-aos-once="true">
@@ -50,7 +51,7 @@
 				</p>
 			</div>
 			<div class="col-three"><br>
-				<h5>Tools</h5>
+				<h6>Tools</h6>
 				<p>
 					Sketch<br>
 					Photoshop<br>
@@ -58,7 +59,7 @@
 				</p>
 			</div>
 			<div class="col-three"><br>
-				<h5>Methods</h5>
+				<h6>Methods</h6>
 				<p>
 					User Center Design<br>
 					UX Evaluation<br>
@@ -66,7 +67,7 @@
 				</p>
 			</div>
 			<div class="col-three"><br>
-				<h5>Time</h5>
+				<h6>Time</h6>
 				<p>3 Months</p>
 			</div>
 			<div class="col-one">
@@ -74,7 +75,7 @@
 			</div>
 			<div class="col-one">				
 				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
-				<div class="btn-visit">Read Design Diary</div></a>
+				<div class="btn-visit">Read Design Diary on Medium</div></a>
 			</div>
 		</div>		
 		<div class="row-project row-project-color" data-aos="fade-down" data-aos-once="true">
@@ -96,7 +97,8 @@
 		
 		<div class="row-project" data-aos="fade-down" data-aos-once="true">
 			<div class="col-one">
-				<h5>How did I write it?</h5>
+				<h6>PROCESS</h6>
+				<h5>Observe - Define - Design</h5>
 			<p>
 				Each entry covers the context of occurrence, the nature of the problem from the user’s perspective, an analytical/theoretical framing of the experience, and a clear recommendation for re-design that would improve the experience.
 			</p>
@@ -115,7 +117,8 @@
 
 		<div class="row-project row-project-color">
 			<div class="col-one">
-				<h5>What's in Design Diary?</h5>
+				<h6>WHAT'S IN DESIGN DIARY?</h6>
+				<h5>The Diary Topics</h5>
 			</div>
 			<div class="col-three" data-aos="flip-left" data-aos-once="true">
 				<img src="design_diary/websites.svg" alt="websites" class="img-col-three"><b>3 Websites</b><br>I selected problems that I faced in using websites. I wrote about design methods and try to use evaluation method to evaluate and improve, including 
