--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" type="text/css" href="../style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -22,25 +23,26 @@
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
-		<span class="drawer_btn_nav"><a href="about.html">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="../index#work.html" class="light">WORK</a></span>
+		<span class="drawer_btn_nav"><a href="../index.html#about">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="../wei_cheng_resume.pdf" target="_blank">RESUME</a></span>		
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
 	<header class="header">
-		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a href="../about.html" class="a_nav"><span class="btn_nav">ABOUT</span></a>
-		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
+		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>	
+		<a href="../wei_cheng_resume.pdf" target="_blank" class="a_nav"><span class="btn_nav">RESUME</span></a>		
+		<a href="../index.html#about" class="a_nav"><span class="btn_nav">ABOUT</span></a>
+		<a href="../index.html#work" class="a_nav"><span class="btn_nav light">WORK</span></a>	
 	</header>
-
-	<div class="parallax-small parallax-nsysuhero">
-		<article class="intro">
+	
+	<article class="intro parallax-project intro-krtco">
 			<h1>NSYSU HERO</h1>
 			<p>Game UI Design</p>
-		</article>
-	</div>
+<!-- 		<img class="img-project-intro" src="web_krtco/krtco-intro.png" alt="" data-aos="zoom-in" data-aos-once="true"> -->
+	</article>
 
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
@@ -53,12 +55,12 @@
 				<img src="game_nsysuhero/nsysuhero.svg" alt="" class="img-col-two">
 			</div>
 			<div class="col-two">
-			<h5>Role</h5>
-			<p>I am the graphic designer in a team of 3 people. I designed elements including the objects, and background in the game scenes.</p>
+			<h6>Role</h6>
+			<p>Graphic Designer</p>
 			</div>
 
 			<div class="col-two">
-				<h5>Tools</h5>
+				<h6>Tools</h6>
 				<p>Adobe Illustrator<br>Adobe Photoshop<br>Unity</p>
 			</div>
 		</div>
