some font sizes

--- a/projects/artism.html
+++ b/projects/artism.html
@@ -54,23 +54,23 @@
 				</p>
 			</div>
 		</div>
-		<div class="row-thin">
+		<div class="row-project">
 			<div class="col-four">
 				<h6>Role</h6>
-				<p>UX researcher<br>UX designer<br>UI designer</p>
+				<p>UX research / UX design / UI design</p>
 			</div>
 			<div class="col-four">
 				<h6>Team</h6>
-				<p>Wei Cheng<br>Yanbin Hao</p>
+				<p>Wei Cheng / Yanbin Hao</p>
 			</div>
 			<div class="col-four">
 				<h6>Tools</h6>
-				<p>Paper Prototyping, Balsamiq, Photoshop, Sketch, InVision
+				<p>Paper Prototyping / Balsamiq / Photoshop /  Sketch
 				</p>
 			</div>
 			<div class="col-four">
 				<h6>Methods</h6>
-				<p>Interview, Observation, Wireframing
+				<p>Interview / Observation / Wireframing
 				</p>
 			</div>
 		</div>
@@ -159,7 +159,7 @@
 		<div class="row-full row-project-color">
 			<div class="col-one">
 				<h5>Persona</h5>
-				<p>you can click on the images to enlarge.</p>
+				<p>click to enlarge the images</p>
 			</div>
 			<div class="col-two">
 				<img src="artism/persona-1.png" alt="persona-1" class="img-col-two hover-shadow" onclick="openModal();currentSlide(1)">
@@ -228,7 +228,7 @@
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">Design Diary</h5>
+					<h2 class="hcenter">Design Diary</h2>
 				</div>
 				<div class="col-three">
 					<img class="img-col-one" src="design_diary/designdiary.png" alt="">
