--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -53,16 +53,14 @@
 			<div class="col-three"><br>
 				<h6>Tools</h6>
 				<p>
-					Sketch<br>
-					Photoshop<br>
-					paper sketches
+					Sketch / Adobe Photoshop / paper sketching
 				</p>
 			</div>
 			<div class="col-three"><br>
 				<h6>Methods</h6>
 				<p>
-					User Center Design<br>
-					UX Evaluation<br>
+					User Center Design / 
+					UX Evaluation / 
 					Literature Review
 				</p>
 			</div>
@@ -163,7 +161,7 @@
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">KRTCO Website</h5>
+					<h2 class="hcenter">KRTCO Website</h2>
 				</div>
 				<div class="col-three">
 					<img class="img-col-one" src="web_krtco/krtco.png" alt="">
