--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -38,7 +38,7 @@
 		<a href="../index.html#work" class="a_nav"><span class="btn_nav light">WORK</span></a>	
 	</header>
 	
-	<article class="intro parallax-project intro-krtco">
+	<article class="intro parallax-small intro-nsysuhero">
 			<h1>NSYSU HERO</h1>
 			<p>Game UI Design</p>
 <!-- 		<img class="img-project-intro" src="web_krtco/krtco-intro.png" alt="" data-aos="zoom-in" data-aos-once="true"> -->
@@ -61,7 +61,7 @@
 
 			<div class="col-two">
 				<h6>Tools</h6>
-				<p>Adobe Illustrator<br>Adobe Photoshop<br>Unity</p>
+				<p>Adobe Illustrator / Adobe Photoshop / Unity</p>
 			</div>
 		</div>
 
@@ -144,7 +144,7 @@
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">DESIGN DIARY</h5>
+					<h2 class="hcenter">Design Diary</h2>
 				</div>
 				<div class="col-three">
 					<img class="img-col-one" src="design_diary/designdiary.png" alt="">
